--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
+title: Tamiru Workneh
+show_downloads: false
+theme: jekyll-theme-minimal
+email: dagne.hirpha@gmail.com
+github_username: tworkneh1
+
 
